--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clipboard-copy": "^4.0.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
