--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
