--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
-    "@types/react-color": "^3.0.10",
     "clipboard-copy": "^4.0.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
@@ -26,7 +25,9 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-color": "^3.0.10",
     "@types/react-dom": "^18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
