--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-color": "^3.0.10",
     "@types/react-dom": "^18.2.7",
     "@types/react-syntax-highlighter": "^15.5.10",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
