--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "uuid": "^9.0.1"
   },
